# puissance-de-la-4e-synergie

./: .gitignore  Rapport.docx  ~$apport.docx
Power4/: CMakeLists.txt  main.cpp
Power4/ai/: mcts.cpp  mcts.h
Power4/game/: power4.cpp  power4.h
Power4/utils/: utils.cpp  utils.h
